feat: add operation audit frontend flow